[package]
name = "quiz_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.5.7"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
